src/objects/Ssr_Tracker_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Closed_Amount__c</fullName>
        <label>Closed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Amount__c</fullName>
        <label>Forecast Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SR</fullName>
                </value>
                <value>
                    <fullName>TK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <label>Snapshot Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ssr_Tracker_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>YTD_Accuracy__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD Accuracy</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YTD_Progress__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD Progress</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <label>Ssr Tracker Snapshot</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ssr Tracker Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>